--- a/config/cloud.properties
+++ b/config/cloud.properties
@@ -1,17 +1,20 @@
 PROVIDER=OPENSHIFT
-PROVIDER_REGISTRY_DOMAIN=10.33.144.141.xip.io
+PROVIDER_DOMAIN=10.33.144.141.xip.io
 DOCKER_REGISTRY_NAME=docker-registry-default
 KUBERNETES_HOST_ADDRESS=bela1:8443
-REGISTRY_ID=tomcat-in-the-cloud
-#REPOSITORY_NAME=""
+REGISTRY_ID=test-deploy
 TOMCAT_IN_THE_CLOUD_BASEDIR=tomcat-in-the-cloud
+#REPOSITORY_NAME=""
 
 #DOCKER_AUTH_FILE=""
-DOCKER_USERNAME=maxime;
-DOCKER_PASSWORD=rzfq-_LxHZzt4Dp98UfT8m8L6v-vsgqcSvWOwyLPTys
+DOCKER_USERNAME=maxime
+DOCKER_PASSWORD=7eTl6htPcI-0DNUItvTLls_T1RY9gn_NvtRwKtuM6lc
 
-DEPLOYMENT_NAME=tomcat-deployer
+DOCKER_IMAGE_NAME = "tomcat-in-the-cloud";
+DOCKER_IMAGE_VERSION = "latest";
+
+DEPLOYMENT_NAME=tomcat-in-the-cloud
 DEPLOYMENT_PORT=8080
 EXPOSED_PORT=80
 REPLICAS=3
-ACCESS_TOKEN=rzfq-_LxHZzt4Dp98UfT8m8L6v-vsgqcSvWOwyLPTys
+ACCESS_TOKEN=7eTl6htPcI-0DNUItvTLls_T1RY9gn_NvtRwKtuM6lc
