--- a/config/cloud.properties
+++ b/config/cloud.properties
@@ -1,20 +1,20 @@
 PROVIDER=OPENSHIFT
-PROVIDER_DOMAIN=10.33.144.141.xip.io
-DOCKER_REGISTRY_NAME=docker-registry-default
-KUBERNETES_HOST_ADDRESS=bela1:8443
-REGISTRY_ID=test-deploy
+REGISTRY_ADDRESS=172.30.1.1:5000
+HOST_ADDRESS=192.168.42.84
+HOST_PORT=8443
+REGISTRY_ID=micro
 TOMCAT_IN_THE_CLOUD_BASEDIR=tomcat-in-the-cloud
+WAR=sample.war
 #REPOSITORY_NAME=""
 
 #DOCKER_AUTH_FILE=""
 DOCKER_USERNAME=maxime
-DOCKER_PASSWORD=7eTl6htPcI-0DNUItvTLls_T1RY9gn_NvtRwKtuM6lc
+DOCKER_TOKEN=8FgoeOeMBXl6cDxr43l0zhl3b_udIw8tDMsc9DeCNKQ
 
-DOCKER_IMAGE_NAME = "tomcat-in-the-cloud";
-DOCKER_IMAGE_VERSION = "latest";
+DOCKER_IMAGE_NAME=tomcat-in-the-cloud
+DOCKER_IMAGE_VERSION=latest
 
 DEPLOYMENT_NAME=tomcat-in-the-cloud
 DEPLOYMENT_PORT=8080
 EXPOSED_PORT=80
 REPLICAS=3
-ACCESS_TOKEN=7eTl6htPcI-0DNUItvTLls_T1RY9gn_NvtRwKtuM6lc
