--- a/config/cloud.properties
+++ b/config/cloud.properties
@@ -1,15 +1,16 @@
 PROVIDER=OPENSHIFT
+MODE=MONOLITHIC
 REGISTRY_ADDRESS=172.30.1.1:5000
 HOST_ADDRESS=192.168.42.84
 HOST_PORT=8443
-REGISTRY_ID=micro
+REGISTRY_ID=test2
 TOMCAT_IN_THE_CLOUD_BASEDIR=tomcat-in-the-cloud
 WAR=sample.war
 #REPOSITORY_NAME=""
 
 #DOCKER_AUTH_FILE=""
 DOCKER_USERNAME=maxime
-DOCKER_TOKEN=8FgoeOeMBXl6cDxr43l0zhl3b_udIw8tDMsc9DeCNKQ
+DOCKER_TOKEN=pOIZra1wnMuUFoRcn4BonTQdfwcUm2l4Q9RRyq6S2xA
 
 DOCKER_IMAGE_NAME=tomcat-in-the-cloud
 DOCKER_IMAGE_VERSION=latest
@@ -17,4 +18,4 @@ DOCKER_IMAGE_VERSION=latest
 DEPLOYMENT_NAME=tomcat-in-the-cloud
 DEPLOYMENT_PORT=8080
 EXPOSED_PORT=80
-REPLICAS=3
+REPLICAS=1
