Clean up property file

--- a/config/cloud.properties
+++ b/config/cloud.properties
@@ -1,16 +1,15 @@
 PROVIDER=OPENSHIFT
-MODE=MONOLITHIC
-REGISTRY_ADDRESS=172.30.1.1:5000
-HOST_ADDRESS=192.168.42.84
-HOST_PORT=8443
-REGISTRY_ID=test2
+MODE=MICROSERVICE
+REGISTRY_ADDRESS=
+HOST_ADDRESS=
+REGISTRY_ID=
 TOMCAT_IN_THE_CLOUD_BASEDIR=tomcat-in-the-cloud
-WAR=sample.war
+WAR=
 #REPOSITORY_NAME=""
 
 #DOCKER_AUTH_FILE=""
-DOCKER_USERNAME=maxime
-DOCKER_TOKEN=pOIZra1wnMuUFoRcn4BonTQdfwcUm2l4Q9RRyq6S2xA
+DOCKER_USERNAME=
+DOCKER_TOKEN=
 
 DOCKER_IMAGE_NAME=tomcat-in-the-cloud
 DOCKER_IMAGE_VERSION=latest
@@ -18,4 +17,4 @@ DOCKER_IMAGE_VERSION=latest
 DEPLOYMENT_NAME=tomcat-in-the-cloud
 DEPLOYMENT_PORT=8080
 EXPOSED_PORT=80
-REPLICAS=1
+REPLICAS=3
