Add Azure Support

--- a/config/cloud.properties
+++ b/config/cloud.properties
@@ -10,6 +10,7 @@ WAR=
 #DOCKER_AUTH_FILE=""
 DOCKER_USERNAME=
 DOCKER_TOKEN=
+DOCKER_REGISTRY_SECRET=arc_auth
 
 DOCKER_IMAGE_NAME=tomcat-in-the-cloud
 DOCKER_IMAGE_VERSION=latest
